discussion/kv_engine/141636/141636_rev48_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 08:09:29.000000000
Message: 
Uploaded patch set 48: Patch Set 47 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 09:04:54.000000000
Message: 
Patch Set 48: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9768/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9768/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19350/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8362/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36730/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/288/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31398/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11769/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11343/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11490/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 13:15:30.000000000
Message: 
Patch Set 48:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9768/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9768/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9768/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8362/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36730/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/288/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31398/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11769/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11343/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19379/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
